get backbone and tastypie to work together nicely

--- a/content/templates/admin/content/question_editing_app.html
+++ b/content/templates/admin/content/question_editing_app.html
@@ -15,4 +15,5 @@
 {% block content %}
 <script type="text/javascript" src="{% static 'js/underscore-min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/backbone-min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/backbone-tastypie.js' %}"></script>
 {% endblock %}
