--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,7 +4,19 @@
 {% block title %}{{ title }} | {% trans 'MobileU site admin' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'MobileU administration' %}</h1>
+    <h1 id="site-name">{% trans 'MobileU administration' %}</h1>
 {% endblock %}
 
-{% block nav-global %}{% endblock %}
+{% block nav-global %}
+    <ul id="grp-user-tools">
+        <li class="grp-user-options-container grp-collapse grp-closed">
+            <a href="javascript://" class="user-options-handler grp-collapse-handler grp-switch-user-is-original">Extras</a>
+            <ul id="grp-user-options">
+                <li>
+                    <a>Dashboard</a>
+                    <a>Reports</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+{% endblock %}
